@@ -5,4 +5,10 @@ Shows next departing trains from a given station id.
 
 ### Dependencies
 
-* Python 3.3
+* Python 3.4
+
+### Motivation
+
+I'd like to see next departing trains without pegging the translink API
+every X seconds/minutes or so. This little script shows the departure
+times, but keeping cached versions of the schedule.
